manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k3s
  namespace: default
  labels:
    app: hello-k3s
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hello-k3s
