manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k3s
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: hello.grimbergenv.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-k3s
            port:
              number: 80
